--- a/package.json
+++ b/package.json
@@ -6,9 +6,21 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "contentful": "^8.1.7",
+    "hamburger-react": "^2.4.0",
+    "rc-slider": "^9.7.1",
     "react": "^17.0.1",
+    "react-calendar": "^3.3.1",
+    "react-date-picker": "^8.0.7",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
+    "react-input-range": "^1.3.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-spinners": "^0.10.6",
+    "react-spring": "^8.0.27",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
